# masterarbeit

./: .gitignore  .gitmodules  .latexmkrc  README.md  main.fls  main.tex  notes.md  report.md
aux/: main-bibtex-entries.bib  main-blx.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.out  main.run.xml  main.toc
bib/: masterarbeit.bib
chatbot/: .env  block_tokenization.ipy  pyproject.toml
chatbot/chatbot/: main.py  pdf.py  providers.py  vectorstore.py
experiments/: .env  chunking.ipynb  chunking.py  data.sh  doc.json  llm_test.py  main.py  out.txt  pdf_extract.ipynb  pdf_loader_with_toc.py  pdf_splitting.py  requirements.txt  setup.sh  test_langchain.py
experiments/.virtual_documents/: Untitled.ipynb
report/: report.fls  report.tex
writing/: .latexmkrc  bert.md  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  notes.md  preamble.tex  structure.md  transformer.md
writing/aux/: main.aux  main.fdb_latexmk
writing/bib/: masterarbeit.bib  zotero.bib
writing/chapters/: 01_introduction.tex  02_backgrounds.tex  03_autogpt.tex  04_agent.tex  05_benchmark.tex  06_results.tex  07_conclusion.tex  agent.tex  autogpt.tex  backgrounds.tex  benchmark.tex  conclusion.tex  introduction.tex  results.tex
writing/chapters/agent/: introduction.tex  llm_generation_improvement_methods.tex  retrieval_augmented_generation.tex
writing/chapters/backgrounds/: gpt.tex  (+3 more)
writing/report/: report.fdb_latexmk
writing/template/: uzl-thesis.cls
writing/tmp/: main-bibtex-entries.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.out  main.run.xml  main.toc
(+11 files in other folders)
